Changes for 1.8.4rc1

 - [ZBX-3019] fixed templated graphs not being copied to discovered hosts in DM setup; thanks to Alexander Ignatyev (asaveljevs)
 - [ZBX-2860] fixed usergroup renaming (Vedmak)
 - [ZBX-3027] avg, delta, max, min, sum functions in popup_trexpr.php have a time shift input, so that this parameter now can be specified through GUI (KB)
 - [ZBX-2827] added checks when adding or updating maintenances, so that duplicate names could not be added (KB)
 - [ZBX-2978] fixed graphs import with Y axis set to an item (Vedmak)
 - [ZBX-2507] minimal graph dimension size is set to 20 pixels (Vedmak)
 - [ZBX-2665] web scenario steps on graphs now are in correct order (Vedmak)
 - [ZBX-2995] fixed crash in zbx_mem_realloc(), reduced memory usage and memory fragmentation in configuration cache (asaveljevs)
 - [ZBX-3024] in trigger expression selection popup, expressions are now filtered, depending on item type (KB)
 - [ZBX-3023] fixed repeated notifications after maintenance period (Sasha)
 - [ZBX-3017] fixed error when try to add dependency to template trigger that is linked to a host (Vedmak)
 - [ZBX-3008] fixed server generating multiple unknown events for triggers with multiple items (asaveljevs)
 - [ZBX-3011] passwords are no longer shown in HTML when editing media types (Vedmak)
 - [ZBXNEXT-510] sending of SMS messages through Ez Texting is now integrated into Zabbix (asaveljevs,Vedmak)
 - [ZBX-1425] option ALL is added to host group dropdown when adding or editing host group (KB)
 - [ZBX-1675] fixed map element coordinates do not update after the element has been dragged (Vedmak)
 - [ZBX-1292] item names are now prefixed with host names, if they are from different hosts in trigger discription popup (KB)
 - [ZBX-2844] added HTML escaping of screen names in combox box output in monitoring (KB)
 - [ZBXNEXT-373] added support for NTLM authentication to Web monitoring (asaveljevs,Vedmak)