@@ -1,5 +1,6 @@
 Changes for 1.8.4rc1
 
+ - [ZBX-3050] fixed that host can be named like an existant template and oterwise (KB)
  - [ZBX-3019] fixed templated graphs not being copied to discovered hosts in DM setup; thanks to Alexander Ignatyev (asaveljevs)
  - [ZBX-2860] fixed usergroup renaming (Vedmak)
  - [ZBX-3027] avg, delta, max, min, sum functions in popup_trexpr.php have a time shift input, so that this parameter now can be specified through GUI (KB)
